--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "ui-story",
-  "private": true,
-  "version": "0.0.0",
+  "name": "nanaben-ui",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,14 +8,32 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "test": "tsc --project tsconfig.app.json && vite build",
+    "build-storybook": "storybook build",
+    "test:watch": "jest --watch"
+  },
+  "description": "A modern UI library for React projects",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "files": [
+    "dist/components",
+    "dist/index.cjs",
+    "dist/index.js"
+  ],
+  "peerDependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
+  "sideEffects": false,
+  "publishConfig": {
+    "access": "restricted"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "hugeicons-react": "^0.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4"
   },
@@ -30,6 +47,11 @@
     "@storybook/react": "^8.4.2",
     "@storybook/react-vite": "^8.4.2",
     "@storybook/test": "^8.4.2",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
@@ -39,12 +61,18 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "eslint-plugin-storybook": "^0.11.0",
     "globals": "^15.11.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.49",
     "storybook": "^8.4.2",
     "tailwindcss": "^3.4.14",
+    "ts-jest": "^29.2.6",
+    "ts-node": "^10.9.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10",
+    "vite-plugin-dts": "^4.5.0",
     "vite-tsconfig-paths": "^5.1.2"
   },
   "eslintConfig": {
